# base-jenerator

./: .gitignore  README.md  pyproject.toml
src/basejenerator/: artifact.py  base_generator.py  base_jenerator.py  generator_output.py
src/basejenerator/artifacts/: artifact_registry.py  base_artifact.py  llm_response_artifact.py  pil_artifact.py  text_artifact.py
